[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/DialogueBox.gd" id="1_script"]

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpeakerLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Speaker Name"

[node name="TextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 1880.0
offset_bottom = 200.0
theme_override_font_sizes/normal_font_size = 28
text = "Dialogue text goes here..."

[node name="ChoicesContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
